blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Fulfilment__c/Fulfilment__c.object-meta.xml
<CustomObject>
    <description>The work of delivering what one sponsor or exhibitor bought, such as logo, speaking slot, stand allocation and passes. Owned by the partnerships or operations team, separate from the sales deal.</description>
    <label>Fulfilment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fulfilments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>