blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Fulfilment__c/fields/Assets_due_date__c.field-meta.xml
<CustomField>
    <fullName>Assets_due_date__c</fullName>
    <description>The day logos, artwork and copy must be received to hit print and web deadlines.</description>
    <label>Assets due date</label>
    <type>Date</type>
</CustomField>