blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Fulfilment__c/fields/Assets_received__c.field-meta.xml
<CustomField>
    <fullName>Assets_received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Logo, copy and artwork have been received from the partner.</description>
    <label>Assets received</label>
    <type>Checkbox</type>
</CustomField>