blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Fulfilment__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ties delivery to the signed deal so promises made in sales are visible to the delivery team.</description>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Fulfilment</relationshipLabel>
    <relationshipName>Fulfilment</relationshipName>
    <type>Lookup</type>
</CustomField>