blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Fulfilment__c/fields/Delivery_owner__c.field-meta.xml
<CustomField>
    <fullName>Delivery_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team member responsible for delivering the booking.</description>
    <label>Delivery owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Fulfilments Delivery owner</relationshipLabel>
    <relationshipName>Fulfilment_Delivery_owner</relationshipName>
    <type>Lookup</type>
</CustomField>