blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Fulfilment__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the event lead one list of everything to deliver.</description>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Fulfilments</relationshipLabel>
    <relationshipName>Fulfilments</relationshipName>
    <type>Lookup</type>
</CustomField>