blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Fulfilment__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows a company's delivery history across editions.</description>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fulfilments</relationshipLabel>
    <relationshipName>Fulfilments</relationshipName>
    <type>Lookup</type>
</CustomField>