blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Fulfilment__c/fields/Passes_allocated__c.field-meta.xml
<CustomField>
    <fullName>Passes_allocated__c</fullName>
    <description>Number of delegate or exhibitor passes issued with this booking.</description>
    <label>Passes allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>