blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Fulfilment__c/fields/Renewal_intent__c.field-meta.xml
<CustomField>
    <fullName>Renewal_intent__c</fullName>
    <description>The partner's stated wish for the next edition, captured at the wrap-up meeting.</description>
    <label>Renewal intent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Will renew</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Won't renew</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>