blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Fulfilment__c/fields/Stand_number__c.field-meta.xml
<CustomField>
    <fullName>Stand_number__c</fullName>
    <description>Stand location on the floor plan. Empty for sponsor-only bookings.</description>
    <label>Stand number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>