blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Fulfilment__c/listViews/Fulfilment_overdue.listView-meta.xml
<ListView>
    <fullName>Fulfilment_overdue</fullName>
    <columns>NAME</columns>
    <columns>Assets_due_date__c</columns>
    <columns>Assets_received__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assets_received__c</field>
        <operation>equals</operation>
        <value></value>
    </filters>
    <filters>
        <field>Assets_due_date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Assets overdue</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>